# spritz

./: .gitignore  AGENTS.md  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt
data/: README.md
docs/: README.md  architecture.md  backward.md  buoyancy_correction.md  copernicus-cop30-dem-download.md  copernicus-lc100-download.md  dataflow.md  firefront.md  firefront_gpu.md  firefront_mpi.md  firefront_netcdf.md  firefront_numerical.md  firefront_spotting.md  firms_ignition.md  getting_started.md  hierarchical_heterogeneous_parallelism.md  hpc.md  io_compatibility.md  meteouniparthenope-wrf-download.md  migration_notes.md  numerical_model.md  parallel_mpi.md  parallelization.md  particle_model.md  plotter.md  production_readiness.md  spritzmet_mpi.md  spritzmet_physics.md  spritzwrf_spritzmet.md  terrain.md  usecases.md  user_manual.md  validation.md  visualization.md
examples/: README.md  backward_firefront.json  backward_plume.json  highres_terrain_auto.json  highres_terrain_local.json  minimal.inp  minimal.json  wildfire_minimal.json  wildfire_mpi.json
examples/data/: highres_dem.asc  highres_landcover.asc
scripts/: check_release.py  ctgproc.py  makegeo.py  spritz.py  spritzmet.py  spritzpost.py  spritzwrf.py  sprtz.py  sprtz_backward.py  sprtz_doctor.py  sprtz_particles.py  sprtz_plot.py  sprtz_satellite_evaluate.py  sprtz_satellite_mask.py  sprtz_terrain.py  sprtzfire.py  terrain.py
src/pypuff/: cli.py  doctor.py  logging.py
src/sprtz/: __init__.py  cli.py  config.py  doctor.py  exceptions.py  logging.py  workflow.py
tests/: test_backward.py  test_buoyancy.py  test_cli.py  test_config.py  test_doctor_and_release.py  test_firefront.py  test_firefront_gpu.py  test_firefront_spotting.py  test_firms.py  test_logging.py  test_models.py  test_parallel.py  test_particle_scientific_robustness.py  test_particles_and_io.py  test_physics.py  test_spritzmet_mpi.py  test_spritzmet_physics.py  test_terrain.py  test_terrain_acquisition.py  test_tools.py  test_usecase03_satellite.py  test_usecase_slurm.py  test_usecases.py  test_validation.py  test_visualization.py
tools/: README.md  copernicus-cop30-dem-download.py  copernicus-lc100-download.py  copernicus-s5p-download.py  copernicus-s5p-no2-download.py  meteouniparthenope-wrf-download  meteouniparthenope-wrf-download.py  plotter.py  profiler.py  render.py  render3d.py
usecases/: README.md  acerra_waste_to_energy.py  high_resolution_wind.py  model_evaluation.py  plotting.py  production_incidents.py  sailing_forecast.py  wildfire.py
usecases/01_high_resolution_wind_field/: README.md  config.json  run.py  step_01_downscale_wind.py  step_01_downscale_wind_impl.py  step_01_interpolate_wind.py
(+246 files in other folders)
