[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sprtz"
version = "0.4.4"
description = "Clean-room pure Python puff and dispersion modeling toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Raffaele Montella / contributors"}]
keywords = ["Spritz", "SpritzWRF", "SpritzMet", "Spritz", "SpritzPost", "Terrain", "MakeGeo", "CTGPROC", "air-quality", "atmospheric-science"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = ["numpy>=1.23", "pyproj>=3.4"]

[project.optional-dependencies]
netcdf = ["netCDF4>=1.6"]
viz = ["matplotlib>=3.7"]
maps = ["contextily>=1.4", "xyzservices>=2023.10"]
geo = ["rasterio>=1.3", "xarray>=2023.1", "rioxarray>=0.14", "shapely>=2.0", "pystac-client>=0.7"]
mpi = ["mpi4py>=3.1"]
fire = ["numba>=0.57", "scikit-image>=0.20"]
spotting = ["scipy>=1.10"]
firms = ["pandas>=1.5", "scipy>=1.10"]
buoyancy = ["scipy>=1.10"]
gpu = ["cupy-cuda12x>=12.0; platform_system!='Darwin'"]
fire_full = ["sprtz[fire,spotting,firms,buoyancy,mpi,netcdf,viz,geo]"]
fire_hpc = ["sprtz[fire,spotting,buoyancy,mpi,netcdf]"]
fire_gpu = ["sprtz[fire,spotting,gpu,netcdf]"]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8", "build>=1.0", "matplotlib>=3.7"]

[project.scripts]
sprtz = "sprtz.cli:main"
spritzwrf = "sprtz.cli:spritzwrf_main"
spritzmet = "sprtz.cli:spritzmet_main"
spritz = "sprtz.cli:spritz_main"
spritzpost = "sprtz.cli:spritzpost_main"
sprtz-particles = "sprtz.cli:sprtz_particles_main"
sprtz-backward = "sprtz.cli:sprtz_backward_main"
sprtzfire = "sprtz.cli:sprtzfire_main"
sprtz-plot = "sprtz.cli:plot_main"
ctgproc = "sprtz.cli:ctgproc_main"
makegeo = "sprtz.cli:makegeo_main"
terrain = "sprtz.cli:terrain_main"
sprtz-terrain = "sprtz.cli:sprtz_terrain_main"
sprtz-doctor = "sprtz.doctor:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sprtz = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
